# astrodon

./: .env.example  .gitignore  .gitmodules  Cargo.toml  astrodon.meta.ts  binary.b.ts  bundler.ts  deno.json  deps.ts  egg.json  mod.ts  readme.md  tauri.conf.json  utils.ts
.github/workflows/: cd.yml  ci.yml
demo/: demo.ts
examples/: .env.example
examples/cli-build/: astrodon.config.ts  dist_mod.ts  mod.ts  utils.ts
examples/cli_build/: astrodon.config.ts  mod.ts  readme.md
examples/compiled_hello_world/: build.ts  demo.ts  readme.md
examples/compiled_vue_app/: astrodon.config.ts  build.renderer.ts  mod.ts  readme.md  utils.ts
examples/hello_world/: astrodon.config.ts  build.ts  demo.ts  dev.ts  readme.md
examples/hello_world/renderer/: index.html
examples/served_vuejs_app/: astrodon.config.ts  mod.ts  readme.md
examples/served_vuejs_app/src/: index.html  main.js
examples/vuejs_app/: build.astrodon.ts  build.render.ts  build.ts  mod.ts  readme.md  utils.ts
examples/vuejs_app/src/: App.js  main.js  router.js
modules/astrodon/: astrodon.d.ts  deps.ts  mod.ts  utils.ts  window.ts
modules/astrodon-build/: change_subsystem.ts  mod.ts
modules/astrodon-build/tests/: app.ts  build.test.ts  develop.test.ts  messages.ts  mod.ts
modules/astrodon-cli/: deps.ts  mod.ts  utils.ts
modules/astrodon-manager/: deps.ts  mod.ts
modules/astrodon-tauri/: Cargo.toml  bundler.ts
modules/astrodon-tauri-development/: Cargo.toml
modules/astrodon-tauri-standalone/: Cargo.toml
modules/astrodon-templates/: readme.md
src/: lib.rs
(+44 files in other folders)
