[package]
name = "astrodon"
version = "0.1.0-alpha"
description = "Desktop App Framework for Deno, based in Tauri"
authors = ["Marc Espín Sanz <mespinsanz@gmail.com>"]
license = "MIT"
repository = "https://github.com/marc2332/astrodon"
edition = "2021"
build = "src/build.rs"

[lib]
name = "astrodon"
crate-type = ["cdylib"]

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/marc2332/tauri", branch="off-main-thread" }